--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     <main>
         <section class="portfolio-section">
             <div class="portfolio-container container">
-                <h1 class="main-services">Our services</h1>
+                <h1 class="main-services visually-hidden">Our services</h1>
                 <!-- Buttons -->
                 <ul class="portfolio-list list">
                     <li><button type="button" class="main-button">All</button></li>
@@ -185,7 +185,7 @@
                     growth solutions.</p>
             </div>
 
-            <div>
+            <div class="footer-second-container">
                 <p class="footer-social-media">Social media</p>
                 <ul class="footer-icons-list">
                     <li class="footer-icons-li">
