--- a/index.html
+++ b/index.html
@@ -387,15 +387,17 @@
                     </li>
                 </ul>
             </div>
-                <form class="footer-form">
+                <div class="footer-form-container">
                     <p class="footer-form-text">Subscribe</p>
-                        <input class="footer-input" type="email" name="email" placeholder="E-mail">
-                    <button class="footer-button-send" type="submit">Subscribe
-                        <svg width="24" height="24">
-                            <use href="./images/icons.svg#send"></use>
-                        </svg>
-                    </button>
-                </form>
+                    <form class="footer-form">                       
+                            <input class="footer-input" type="email" name="email" placeholder="E-mail">
+                        <button class="footer-button-send" type="submit">Subscribe
+                            <svg width="24" height="24">
+                                <use href="./images/icons.svg#send"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
         </div>
     </footer>
 
