--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <div class="footer-form-container">
                     <p class="footer-form-text">Subscribe</p>
                     <form class="footer-form">                       
-                            <input class="footer-input" type="email" name="email" placeholder="E-mail">
+                            <input class="footer-input" type="email" name="email" placeholder="E-mail" aria-label="e-mail">
                         <button class="footer-button-send" type="submit">Subscribe
                             <svg width="24" height="24">
                                 <use href="./images/icons.svg#send"></use>
@@ -412,32 +412,32 @@
             <p class="modal-form-text">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <label class="modal-label"><span class="modal-label-text-first">Name</span>
-                    <div class="modal-input-div">
+                    <span class="modal-input-div">
                         <input class="modal-input" type="text" name="username" required pattern="^[a-zA-Zа-яА-Я]+$"
                             minlength="3" maxlength="12">
-                        <svg class="modal-form-svg" width="18" height="18">
+                        <svg class="modal-form-svg" width="18" height="24">
                             <use href="./images/icons.svg#person"></use>
                         </svg>
-                    </div>
+                    </span>
                 </label>
 
                 <label class="modal-label"><span class="modal-label-text">Phone</span>
-                    <div class="modal-input-div">
+                    <span class="modal-input-div">
                         <input class="modal-input" type="tel" name="phone_number"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" required>
-                        <svg class="modal-form-svg" width="18" height="18">
+                        <svg class="modal-form-svg" width="18" height="24">
                             <use href="./images/icons.svg#phone"></use>
                         </svg>
-                    </div>
+                    </span>
                 </label>
 
                 <label class="modal-label"><span class="modal-label-text">Email</span>
-                    <div class="modal-input-div">
+                    <span class="modal-input-div">
                         <input class="modal-input" type="email" name="email" required>
-                        <svg class="modal-form-svg" width="18" height="18">
+                        <svg class="modal-form-svg" width="18" height="24">
                             <use href="./images/icons.svg#email"></use>
                         </svg>
-                    </div>
+                    </span>
                 </label>
 
                 <label class="modal-label"><span class="modal-label-text">Comment</span>
@@ -447,15 +447,14 @@
                 <input class="modal-input-privacy visually-hidden" type="checkbox" name="checkbox" id="label-privacy"
                     required>
                 <label class="modal-label-privacy" for="label-privacy">I accept the terms and conditions of the&nbsp;<a
-                        href="">Privacy Policy</a>
+                        href="" class="modal-privacy-policy">Privacy Policy</a>
                 </label>
                 <button class="modal-send-button" type="submit">Send</button>
             </form>
         </div>
     </div>
-    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
-<script src="./js/modal.js"></script>
 
 </html>
